Stopped recalculating custom probabilities every generation, changed var to let, and prevented text from stretching offscreen

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ h2 {
     width: 90%;
 }
 
+#output-text {
+    word-break: break-all;
+}
+
 #main-controls, #scan {
     flex: 1;
 }
